# bin

./: .aliases  .editorconfig  .functions  .gitignore  .tldrrc  .zprofile  .zprofile.macos  .zprofile.ubuntu  .zshrc  .zshrc.macos  .zshrc.ubuntu  Cargo.toml  FixWord.pl  Getopt.pl  apacheFancyIndex.css  autoOne  autoTwo  count  cpconfig  finddupes  fixText  fixText.py  fixText.rb  fixname  integrity  mkAutoresponders  mkIssue  oh-my-zsh.sh  properCase  rename  rmEmpty  rmfd  setPerms.pl  setTag  splitCSV  studio  syncWork  tidy.sed
rust/: Cargo.toml  fixwords.md  fixwords.rs
rust/src/: fixwords.rs
test/fixwords/: brokenwords.txt
