[package]
name = "PaulBin"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "./"

[dependencies]
regex = "1.12.3"
regex-automata = "0.4.14"
regex-syntax = "0.8.10"

[features]
regex = []

[[bin]]
name = "fixwords"
path = "rust/fixwords.rs"
required-features = ["regex"]
target = "./fixwords"
